Добавил прокси-сервер Nginx

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,10 @@ bin/
 obj/
 
 Frontend/**/*.js
-
 Frontend/**/*.map
-
 Frontend/node_modules/*
+Frontemd/**/package-lock.json
 
-package-lock.json
+Nginx/**/*Cache
+Nginx/**/*.log
+Nginx/**/*.pid
