--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -3,7 +3,7 @@
     "projects": {
         "purchaseapp": {
             "projectType": "application",
-            "root": "",
+            "root": "C:\\Repository\\My-notes\\Frontend",
             "sourceRoot": "src",
             "architect": {
                 "build": {
