--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ obj/
 Frontend/**/*.js
 Frontend/**/*.map
 Frontend/node_modules/*
-Frontemd/**/package-lock.json
+Frontend/**/package-lock.json
 
-Nginx/**/*Cache
-Nginx/**/*.log
-Nginx/**/*.pid
+#Nginx/**/*Cache
+#Nginx/**/*.log
+#Nginx/**/*.pid
