--- a/Nginx/conf/nginx.conf
+++ b/Nginx/conf/nginx.conf
@@ -29,6 +29,13 @@ http {
           proxy_set_header Connection "upgrade";
           proxy_set_header Host $host;
       }
+      location /asset {
+          proxy_pass http://localhost:4200;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade $http_upgrade;
+          proxy_set_header Connection "upgrade";
+          proxy_set_header Host $host;
+      }
       
       
     }  
