--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,9 +16,10 @@
         "@angular/platform-browser": "~10.0.0",
         "@angular/platform-browser-dynamic": "~10.0.0",
         "@angular/router": "~10.0.0",
+        "@auth0/angular-jwt": "^5.0.1",
+        "bootstrap": "~4.5.0",
         "rxjs": "~6.5.5",
-        "zone.js": "~0.10.3",
-        "bootstrap": "~4.5.0"
+        "zone.js": "~0.10.3"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1000.0",
