--- a/MyNotes/appsettings.json
+++ b/MyNotes/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ServerLink": "https://localhost:44380",
+    "SecretKey": "superSecretKey@345",
+    "connectionString": "Data Source=Users.db",
+    "AccessTokenLifeTime": "5",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
