--- a/Nginx/conf/nginx.conf
+++ b/Nginx/conf/nginx.conf
@@ -19,9 +19,11 @@ http {
 
     
     server {
-      location /Api/Note{
+      location /Api{
           proxy_pass https://localhost:44338;
       }
+      
+      
       location / {
           proxy_pass http://localhost:4200;
           proxy_http_version 1.1;
@@ -29,13 +31,7 @@ http {
           proxy_set_header Connection "upgrade";
           proxy_set_header Host $host;
       }
-      location /asset {
-          proxy_pass http://localhost:4200;
-          proxy_http_version 1.1;
-          proxy_set_header Upgrade $http_upgrade;
-          proxy_set_header Connection "upgrade";
-          proxy_set_header Host $host;
-      }
+      
       
       
     }  
