Add config files.

--- a/MyNotes/appsettings.json
+++ b/MyNotes/appsettings.json
@@ -1,7 +1,7 @@
 {
-    "ServerLink": "https://localhost:44380",
+    "ServerUrl": "https://localhost:44380",
     "SecretKey": "superSecretKey@345",
-    "connectionString": "Data Source=Users.db",
+    "ConnectionString": "Data Source=Users.db",
     "AccessTokenLifeTime": "1",
     "Logging": {
         "LogLevel": {
