Using cookies instead of local storage for tokens.

--- a/MyNotes/appsettings.json
+++ b/MyNotes/appsettings.json
@@ -2,7 +2,8 @@
     "ServerUrl": "https://localhost:44380",
     "SecretKey": "superSecretKey@345",
     "ConnectionString": "Data Source=Users.db",
-    "AccessTokenLifeTime": "1",
+    "AccessTokenLifeTimeMinutes": "1",
+    "RefreshTokenLifeTimeDays" :  "1",
     "Logging": {
         "LogLevel": {
             "Default": "Information",
