--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -26,6 +26,7 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
                         "browserTarget": "purchaseapp:build"
+                        //"ssl": true
                     }
                 }
             }
