--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -9,24 +9,36 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "outputPath": "../Mynotes/wwwroot",
+                        "outputPath": "../MyNotes/wwwroot",
                         "index": "src/index.html",
                         "main": "src/main.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.json",
-                        "assets": [ "src/assets" ],
+                        "assets": [
+                            "src/favicon.ico",
+                            "src/assets"
+                        ],
                         "aot": true,
                         "styles": [
                             "src/index.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css"
                         ]
+                    },
+                    "configurations": {
+                        "production": {
+                            "optimization": true,
+                            "outputHashing": "all",
+                            "sourceMap": false,
+                            "namedChunks": false,
+                            "vendorChunk": false,
+                            "buildOptimizer": true
+                        }
                     }
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
                         "browserTarget": "purchaseapp:build"
-                        //"ssl": true
                     }
                 }
             }
