--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -8,7 +8,7 @@
         "experimentalDecorators": true,
         "module": "esnext",
         "moduleResolution": "node",
-        "target": "es2015",
+        "target": "ES2020",
         "typeRoots": [
             "node_modules/@types"
         ],
